<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.example.technicaltest.domain.movie.Movie" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        android:layout_marginVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textStyle="normal"
                        android:textSize="16sp"
                        android:layout_marginHorizontal="10dp"
                        android:text="@{movie.title}" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:text="@{movie.overview}" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:src="@drawable/preview"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>